Fix feature list item alignment in FF

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -230,11 +230,11 @@ main section.features {
     padding: 0;
     list-style: none;
     color: #4d4d4d;
-    margin-top: -10px;
+    margin-top: -4px;
 
     li {
       font-size: 18px;
-      margin-top: 14px;
+      line-height: 40px;
 
       &:nth-child(n+5) {
         display: none;
